run as soon as loaded
linked main.js and overwrote 3s time with auto run upon load; timer there and changed to 1.5 sec (can switch back to it)

--- a/index.html
+++ b/index.html
@@ -3,6 +3,10 @@
 <head>
 	<link rel="stylesheet" href="./css/main.css">
 </head>
+<script src="js/vendor/modernizr-2.6.2.min.js"></script>
+<!-- <script src="//ajax.googleapis.com/ajax/libs/jquery/1.9.1/jquery.min.js"></script> -->
+	<script>window.jQuery || document.write('<script src="js/vendor/jquery-1.9.1.min.js"><\/script>')</script>
+	<script src="js/main.js"></script>
 <body>
 	<div id=body>
 	<!------PRELOADER------>
@@ -20,24 +24,24 @@
 			<p>Index page for personal portfolio</p>
 		</div> -->
 
-	<main id="top" class="masthead" role="main">
-		<div class="container">
-			<br>
-			<h2><strong>Hello World!<br> I'm</strong></h2>
-			<h1><strong>Jane<br>Illarionova.</strong></h1>
-			<hr class="light">
+		<main id="top" class="masthead" role="main">
+			<div class="container">
+				<br>
+				<h2><strong>Hello World!<br> I'm</strong></h2>
+				<h1><strong>Jane<br>Illarionova.</strong></h1>
+				<hr class="light">
 
-			<br><br><br><br><br>
- 
-			<a href="index.html#explore" class="scrollto">
-				<p class="scrollto--arrow"><img src="images/scroll_down.png" alt="scroll down arrow"></p>
-			</a>
+				<br><br><br><br><br>
+	 
+				<a href="index.html#explore" class="scrollto">
+					<p class="scrollto--arrow"><img src="images/scroll_down.png" alt="scroll down arrow"></p>
+				</a>
 
-		</div><! --/container -->
-	</main><! --/main -->
-
-
+			</div><! --/container -->
+		</main><! --/main -->
 
 	</div>
+
+
 </body>
 </html>
