--- a/index.html
+++ b/index.html
@@ -9,7 +9,8 @@
 	<script src="js/main.js"></script>
 <body>
 	<div id=body>
-	<!------PRELOADER------>
+
+<!---PRELOADER-->
 		<div id="loader-wrapper">
 		    <div id="loader"></div>
 		 
@@ -18,7 +19,8 @@
 		 
 		</div>
 
-	<!------CONTENT REVEAL/HERO------>	
+<!---CONTENT REVEAL/HERO-->	
+
 <!-- old content body		<div id="content">
 		    <h1>Hello World</h1>
 			<p>Index page for personal portfolio</p>
@@ -31,14 +33,41 @@
 				<h1><strong>Jane<br>Illarionova.</strong></h1>
 				<hr class="light">
 
-				<br><br><br><br><br>
+				<br><br><br><br><br><br><br><br>
 	 
-				<a href="index.html#explore" class="scrollto">
-					<p class="scrollto--arrow"><img src="images/scroll_down.png" alt="scroll down arrow"></p>
+				<a href="index.html#about" class="scrollto">
+				<p class="scrollto--arrow"><img src="images/scroll_down.png" alt="scroll down arrow"></p>
 				</a>
 
-			</div><! --/container -->
-		</main><! --/main -->
+			</div><!--container -->
+		</main><!--main -->
+
+<!---ABOUT-->	
+
+	<section id="about">
+
+      <div class="row">
+
+         <div class="three columns"> 
+         	<br><br><br><br>
+
+            <img class="profile-pic"  src="images/profile/IMG_8797.jpg" alt="" />
+
+         </div>
+
+         <div>
+
+            <h2>About Me</h2>
+
+            <h3>I love to solve problems. If it isn't broken, you can still fix it.<br>I'll work on fixing this "About Me" section in a bit...</h3>
+
+
+         </div> <!-- end .main-col -->
+
+      </div>
+
+   </section> <!-- About Section End-->
+
 
 	</div>
 
