--- a/index.html
+++ b/index.html
@@ -2,6 +2,8 @@
 <html class="no-js">
 <head>
 	<link rel="stylesheet" href="./css/main.css">
+	<link rel='stylesheet' href='https://fonts.googleapis.com/css?family=IBM Plex Serif'>
+	<link rel="stylesheet" href="css/bootstrap.min.css">
 </head>
 <script src="js/vendor/modernizr-2.6.2.min.js"></script>
 <!-- <script src="//ajax.googleapis.com/ajax/libs/jquery/1.9.1/jquery.min.js"></script> -->
@@ -31,7 +33,8 @@
 				<br>
 				<h2><strong>Hello World!<br> I'm</strong></h2>
 				<h1><strong>Jane<br>Illarionova.</strong></h1>
-				<hr class="light">
+				<br><br>
+				<hr class="thicker">
 
 				<br><br><br><br><br><br><br><br>
 	 
@@ -46,25 +49,18 @@
 
 	<section id="about">
 
-      <div class="row">
+		<div class="row tm-media-row">
+                <div class="col-xs-12 col-sm-4 col-md-4 col-lg-4">
+                    <img src="images/profile/IMG_8797_cropped.jpg" alt="Image" class="img-fluid img-circle img-thumbnail tm-media-img">
+                </div>
+                <div class="col-xs-12 col-sm-8 col-md-8 col-lg-8">
+                    <div class="tm-media-text-container">
+                        <h2 class="tm-media-title tm-gray-text">A bit about me</h2>
+                        <h3 class="tm-media-description tm-gray-text-2">I love to solve problems. If it isn't broken, you can still fix it.<br>I'll work on fixing this "About Me" section in a bit...</h3>    
+                    </div>                    
+                </div>
+            </div>
 
-         <div class="three columns"> 
-         	<br><br><br><br>
-
-            <img class="profile-pic"  src="images/profile/IMG_8797.jpg" alt="" />
-
-         </div>
-
-         <div>
-
-            <h2>About Me</h2>
-
-            <h3>I love to solve problems. If it isn't broken, you can still fix it.<br>I'll work on fixing this "About Me" section in a bit...</h3>
-
-
-         </div> <!-- end .main-col -->
-
-      </div>
 
    </section> <!-- About Section End-->
 
