--- a/index.html
+++ b/index.html
@@ -51,7 +51,7 @@
 
 		<div class="row tm-media-row">
                 <div class="col-xs-12 col-sm-4 col-md-4 col-lg-4">
-                    <img src="https://github.com/JaneIllario/JaneIllario.github.io/blob/master/images/profile/IMG_8797.JPG" alt="Why isn't my picture showing up??" class="img-fluid img-circle img-thumbnail tm-media-img">
+                    <img src="JaneIllario.github.io/images/profile/IMG_8797.JPG" alt="Why isn't my picture showing up??" class="img-fluid img-circle img-thumbnail tm-media-img">
                 </div>
                 <div class="col-xs-12 col-sm-8 col-md-8 col-lg-8">
                     <div class="tm-media-text-container">
