--- a/index.html
+++ b/index.html
@@ -55,8 +55,8 @@
                 </div>
                 <div class="col-xs-12 col-sm-8 col-md-8 col-lg-8">
                     <div class="tm-media-text-container">
-                        <h2 class="tm-media-title tm-gray-text">A bit about me</h2>
-                        <h3 class="tm-media-description tm-gray-text-2">I love to solve problems. If it isn't broken, you can still fix it.<br>I'll work on fixing this "About Me" section in a bit...</h3>    
+                        <h3 class="tm-media-title tm-gray-text">A bit about me</h3>
+                        <h4 class="tm-media-description tm-gray-text-2">Hey, it's Jane! I am a Computer Engineering student at the University of Toronto, specializing in Software and Machine Intelligence. I love building things that solve problems, improving thsoe solutions, and finding better ways of going about all of it -- especially through software.</h4>    
                     </div>                    
                 </div>
             </div>
