bug fix css classes
overlapping definition of "row"

--- a/index.html
+++ b/index.html
@@ -69,7 +69,7 @@
 <!---THINGS I DO-->
 <section id="portfolio">
 
-      <div class="row">
+      <div class="row-p">
 
          <div class="twelve columns collapsed">
 
