--- a/index.html
+++ b/index.html
@@ -56,7 +56,7 @@
                 </div>
                 <div class="col-xs-12 col-sm-8 col-md-8 col-lg-8">
                     <div class="tm-media-text-container">
-                        <h3 class="tm-media-title tm-gray-text">A bit about me</h3>
+                        <h3 class="tm-media-title tm-gray-text"><strong>A bit about me</h3></strong>
                         <h4 class="tm-media-description tm-gray-text-2">Hey, it's Jane! I am a Computer Engineering student at the University of Toronto, specializing in Software and Machine Intelligence. I love building things that solve problems, improving thsoe solutions, and finding better ways of going about all of it -- especially through software.</h4>    
                     </div>                    
                 </div>
@@ -73,7 +73,7 @@
 
          <div class="twelve columns collapsed">
 
-            <h1>Things I Do</h1>
+            <h3 class="tm-media-title tm-gray-text"><strong>Things I Do</h3></strong>
 
             <!-- portfolio-wrapper -->
             <div id="portfolio-wrapper" class="bgrid-quarters s-bgrid-thirds cf">
