--- a/index.html
+++ b/index.html
@@ -70,11 +70,11 @@
 <!---THINGS I DO-->
 <section id="portfolio">
 
-      <div class="row-p" bgcolor="#ebeeee">
+      <div class="row-p">
 
          <div class="twelve columns collapsed">
 
-            <h3 class="tm-media-title tm-gray-text"><strong>Things I Do</h3></strong>
+            <h3 class="tm-media-title tm-gray-text"><strong>Things I Do<br></h3></strong>
 
             <nav class="project-filter clearfix text-center wow fadeInLeft"  data-wow-delay="0.5s">
 		        <ul class="list-inline">
@@ -85,6 +85,7 @@
 		            <li><a href="javascript:;" class="filter" data-filter=".involvement">Involvement</a></li> <!-- was .web -->
 		            <li><a href="javascript:;" class="filter" data-filter=".otherrandom">Other Random</a></li> <!-- was .print -->
 		        </ul>
+		        <br>
      		</nav>
 
             <!-- portfolio-wrapper -->
