--- a/index.html
+++ b/index.html
@@ -95,7 +95,7 @@
                   <div class="item-wrap">
 
                      <a href="#modal-01" title="">
-                        <img alt="" src="images/portfolio/coffee.jpg">
+                        <img alt="" src="images/portfolio/hackmining.jpg">
                         <div class="overlay">
                            <div class="portfolio-item-meta">
           					      <h5>Hackmining</h5>
@@ -112,10 +112,10 @@
                   <div class="item-wrap">
 
                      <a href="#modal-02" title="">
-                        <img alt="" src="images/portfolio/console.jpg">
+                        <img alt="" src="images/portfolio/IMG_0123.jpg">
                         <div class="overlay">
                            <div class="portfolio-item-meta">
-          					      <h5>Console</h5>
+          					      <h5>Toronto AI</h5>
                               <p>Web Development</p>
           					   </div>
                         </div>
@@ -129,10 +129,10 @@
                   <div class="item-wrap">
 
                      <a href="#modal-03" title="">
-                        <img alt="" src="images/portfolio/judah.jpg">
+                        <img alt="" src="images/portfolio/peo6.jpg">
                         <div class="overlay">
                            <div class="portfolio-item-meta">
-          					      <h5>Judah</h5>
+          					      <h5>PEO Awards</h5>
                               <p>Webdesign</p>
           					   </div>
                         </div>
@@ -146,10 +146,10 @@
                   <div class="item-wrap">
 
                      <a href="#modal-04" title="">
-                        <img alt="" src="images/portfolio/into-the-light.jpg">
+                        <img alt="" src="images/portfolio/IMG_5802.jpg">
                         <div class="overlay">
                            <div class="portfolio-item-meta">
-          					      <h5>Into The Light</h5>
+          					      <h5>Brain Power</h5>
                               <p>Photography</p>
           					   </div>
                         </div>
