--- a/index.html
+++ b/index.html
@@ -146,7 +146,7 @@
                   <div class="item-wrap">
 
                      <a href="#modal-04" title="">
-                        <img alt="" src="images/portfolio/IMG_5802.jpg">
+                        <img alt="" src="images/portfolio/IMG_5802.JPG">
                         <div class="overlay">
                            <div class="portfolio-item-meta">
           					      <h5>Brain Power</h5>
