--- a/index.html
+++ b/index.html
@@ -112,7 +112,7 @@
                   <div class="item-wrap">
 
                      <a href="#modal-02" title="">
-                        <img alt="" src="images/portfolio/IMG_0123.jpg">
+                        <img alt="" src="images/portfolio/IMG_0123.JPG">
                         <div class="overlay">
                            <div class="portfolio-item-meta">
           					      <h5>Toronto AI</h5>
