--- a/index.html
+++ b/index.html
@@ -236,6 +236,160 @@
 
     	</div> <!-- row End -->
 
+      <div class="row-p">
+
+         <div class="twelve columns collapsed">
+
+            <!-- portfolio-wrapper -->
+            <div id="portfolio-wrapper" class="bgrid-quarters s-bgrid-thirds cf">
+
+               <div class="columns portfolio-item">
+                  <div class="item-wrap">
+
+                     <a href="#modal-01" title="">
+                        <img alt="" src="images/portfolio/hackmining.jpg">
+                        <div class="overlay">
+                           <div class="portfolio-item-meta">
+                          <h5>Hackmining</h5>
+                              <p>Hackathon</p>
+                       </div>
+                        </div>
+                        <div class="link-icon"><i class="icon-plus"></i></div>
+                     </a>
+
+                  </div>
+              </div> <!-- item end -->
+
+               <div class="columns portfolio-item">
+                  <div class="item-wrap">
+
+                     <a href="#modal-02" title="">
+                        <img alt="" src="images/portfolio/IMG_0123.JPG">
+                        <div class="overlay">
+                           <div class="portfolio-item-meta">
+                          <h5>Toronto AI</h5>
+                              <p>Web Development</p>
+                       </div>
+                        </div>
+                        <div class="link-icon"><i class="icon-plus"></i></div>
+                     </a>
+
+                  </div>
+              </div> <!-- item end -->
+
+               <div class="columns portfolio-item">
+                  <div class="item-wrap">
+
+                     <a href="#modal-03" title="">
+                        <img alt="" src="images/portfolio/peo6.jpg">
+                        <div class="overlay">
+                           <div class="portfolio-item-meta">
+                          <h5>PEO Awards</h5>
+                              <p>Webdesign</p>
+                       </div>
+                        </div>
+                        <div class="link-icon"><i class="icon-plus"></i></div>
+                     </a>
+
+                  </div>
+              </div> <!-- item end -->
+
+               <div class="columns portfolio-item">
+                  <div class="item-wrap">
+
+                     <a href="#modal-04" title="">
+                        <img alt="" src="images/portfolio/IMG_5802.JPG">
+                        <div class="overlay">
+                           <div class="portfolio-item-meta">
+                          <h5>Brain Power</h5>
+                              <p>Photography</p>
+                       </div>
+                        </div>
+                        <div class="link-icon"><i class="icon-plus"></i></div>
+                     </a>
+
+                  </div>
+              </div> <!-- item end -->
+
+          </div> <!-- portfolio-wrapper end -->
+
+      </div> <!-- twelve columns end -->
+
+
+      <!-- THINGS I DO POPUPS -->
+
+      <div id="modal-01" class="popup-modal mfp-hide">
+
+          <img class="scale-with-grid" src="images/portfolio/modals/m-coffee.jpg" alt="" />
+
+          <div class="description-box">
+            <h4>Coffee Cup</h4>
+            <p>Proin gravida nibh vel velit auctor aliquet. Aenean sollicitudin, lorem quis bibendum auctor, nisi elit consequat ipsum, nec sagittis sem nibh id elit.</p>
+               <span class="categories"><i class="fa fa-tag"></i>Branding, Webdesign</span>
+          </div>
+
+            <div class="link-box">
+               <a href="http://www.behance.net">Details</a>
+             <a class="popup-modal-dismiss">Close</a>
+            </div>
+
+        </div><!-- modal-01 End -->
+
+         <div id="modal-02" class="popup-modal mfp-hide">
+
+          <img class="scale-with-grid" src="images/portfolio/modals/m-console.jpg" alt="" />
+
+          <div class="description-box">
+            <h4>Console</h4>
+            <p>Proin gravida nibh vel velit auctor aliquet. Aenean sollicitudin, lorem quis bibendum auctor, nisi elit consequat ipsum, nec sagittis sem nibh id elit.</p>
+               <span class="categories"><i class="fa fa-tag"></i>Branding, Web Development</span>
+          </div>
+
+            <div class="link-box">
+               <a href="http://www.behance.net">Details</a>
+             <a class="popup-modal-dismiss">Close</a>
+            </div>
+
+        </div><!-- modal-02 End -->
+
+         <div id="modal-03" class="popup-modal mfp-hide">
+
+          <img class="scale-with-grid" src="images/portfolio/modals/m-judah.jpg" alt="" />
+
+          <div class="description-box">
+            <h4>Judah</h4>
+            <p>Proin gravida nibh vel velit auctor aliquet. Aenean sollicitudin, lorem quis bibendum auctor, nisi elit consequat ipsum, nec sagittis sem nibh id elit.</p>
+               <span class="categories"><i class="fa fa-tag"></i>Branding</span>
+          </div>
+
+            <div class="link-box">
+               <a href="http://www.behance.net">Details</a>
+             <a class="popup-modal-dismiss">Close</a>
+            </div>
+
+        </div><!-- modal-03 End -->
+
+         <div id="modal-04" class="popup-modal mfp-hide">
+
+          <img class="scale-with-grid" src="images/portfolio/modals/m-intothelight.jpg" alt="" />
+
+          <div class="description-box">
+            <h4>Into the Light</h4>
+            <p>Proin gravida nibh vel velit auctor aliquet. Aenean sollicitudin, lorem quis bibendum auctor, nisi elit consequat ipsum, nec sagittis sem nibh id elit.</p>
+               <span class="categories"><i class="fa fa-tag"></i>Photography</span>
+          </div>
+
+            <div class="link-box">
+               <a href="http://www.behance.net">Details</a>
+             <a class="popup-modal-dismiss">Close</a>
+            </div>
+
+        </div><!-- modal-04 End -->
+
+      </div> <!-- row End -->
+
+
+
    </section> <!-- Portfolio Section End-->
 
 
