--- a/index.html
+++ b/index.html
@@ -247,10 +247,10 @@
                   <div class="item-wrap">
 
                      <a href="#modal-01" title="">
-                        <img alt="" src="images/portfolio/hackmining.jpg">
+                        <img alt="" src="images/portfolio/IMG_0118.jpg">
                         <div class="overlay">
                            <div class="portfolio-item-meta">
-                          <h5>Hackmining</h5>
+                          <h5>Citadel</h5>
                               <p>Hackathon</p>
                        </div>
                         </div>
@@ -264,11 +264,11 @@
                   <div class="item-wrap">
 
                      <a href="#modal-02" title="">
-                        <img alt="" src="images/portfolio/IMG_0123.JPG">
+                        <img alt="" src="images/portfolio/IMG_9888.JPG">
                         <div class="overlay">
                            <div class="portfolio-item-meta">
-                          <h5>Toronto AI</h5>
-                              <p>Web Development</p>
+                          <h5>ElleHacks</h5>
+                              <p>Women in STEM Hackathon</p>
                        </div>
                         </div>
                         <div class="link-icon"><i class="icon-plus"></i></div>
@@ -281,11 +281,11 @@
                   <div class="item-wrap">
 
                      <a href="#modal-03" title="">
-                        <img alt="" src="images/portfolio/peo6.jpg">
+                        <img alt="" src="images/portfolio/IMG_0163.jpg">
                         <div class="overlay">
                            <div class="portfolio-item-meta">
-                          <h5>PEO Awards</h5>
-                              <p>Webdesign</p>
+                          <h5>Telus IoT</h5>
+                              <p>SmartCity Hackathon</p>
                        </div>
                         </div>
                         <div class="link-icon"><i class="icon-plus"></i></div>
@@ -298,11 +298,11 @@
                   <div class="item-wrap">
 
                      <a href="#modal-04" title="">
-                        <img alt="" src="images/portfolio/IMG_5802.JPG">
+                        <img alt="" src="images/portfolio/podcast_head.jpg">
                         <div class="overlay">
                            <div class="portfolio-item-meta">
-                          <h5>Brain Power</h5>
-                              <p>Photography</p>
+                          <h5>Podcasts</h5>
+                              <p>Leisure</p>
                        </div>
                         </div>
                         <div class="link-icon"><i class="icon-plus"></i></div>
