--- a/index.html
+++ b/index.html
@@ -247,7 +247,7 @@
                   <div class="item-wrap">
 
                      <a href="#modal-01" title="">
-                        <img alt="" src="images/portfolio/IMG_0118.jpg">
+                        <img alt="" src="images/portfolio/IMG_0118.JPG">
                         <div class="overlay">
                            <div class="portfolio-item-meta">
                           <h5>Citadel</h5>
