--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
 	<script>window.jQuery || document.write('<script src="js/vendor/jquery-1.9.1.min.js"><\/script>')</script>
 	<script src="js/main.js"></script>
 
-<body data-spy="scroll" data-target=".nav-wrap">
+<body data-spy="scroll" data-target="#nav-wrap" id=body>
 
 
 <!---PRELOADER-->
