--- a/index.html
+++ b/index.html
@@ -107,7 +107,7 @@
             <!-- portfolio-wrapper -->
             <div id="portfolio-wrapper" class="bgrid-quarters s-bgrid-thirds cf">
 
-          	   <div class="columns portfolio-item">
+          	   <div class="columns portfolio-item .hackathons">
                   <div class="item-wrap">
 
                      <a href="#modal-01" title="">
@@ -124,7 +124,7 @@
                   </div>
           		</div> <!-- item end -->
 
-               <div class="columns portfolio-item">
+               <div class="columns portfolio-item .projects">
                   <div class="item-wrap">
 
                      <a href="#modal-02" title="">
@@ -141,7 +141,7 @@
                   </div>
           		</div> <!-- item end -->
 
-               <div class="columns portfolio-item">
+               <div class="columns portfolio-item .coolevents">
                   <div class="item-wrap">
 
                      <a href="#modal-03" title="">
@@ -158,7 +158,7 @@
                   </div>
           		</div> <!-- item end -->
 
-               <div class="columns portfolio-item">
+               <div class="columns portfolio-item .otherrandom">
                   <div class="item-wrap">
 
                      <a href="#modal-04" title="">
@@ -175,7 +175,7 @@
                   </div>
           		</div> <!-- item end -->
 
-              <div class="columns portfolio-item">
+              <div class="columns portfolio-item .hackathons">
                   <div class="item-wrap">
 
                      <a href="#modal-01" title="">
@@ -192,7 +192,7 @@
                   </div>
               </div> <!-- item end -->
 
-               <div class="columns portfolio-item">
+               <div class="columns portfolio-item .hackathons">
                   <div class="item-wrap">
 
                      <a href="#modal-02" title="">
@@ -209,7 +209,7 @@
                   </div>
               </div> <!-- item end -->
 
-               <div class="columns portfolio-item">
+               <div class="columns portfolio-item .hackathons">
                   <div class="item-wrap">
 
                      <a href="#modal-03" title="">
@@ -226,7 +226,7 @@
                   </div>
               </div> <!-- item end -->
 
-               <div class="columns portfolio-item">
+               <div class="columns portfolio-item .otherrandom">
                   <div class="item-wrap">
 
                      <a href="#modal-04" title="">
