--- a/index.html
+++ b/index.html
@@ -107,7 +107,7 @@
             <!-- portfolio-wrapper -->
             <div id="portfolio-wrapper" class="bgrid-quarters s-bgrid-thirds cf">
 
-          	   <div class="columns portfolio-item .hackathons">
+          	   <div class="columns portfolio-item hackathons">
                   <div class="item-wrap">
 
                      <a href="#modal-01" title="">
@@ -124,7 +124,7 @@
                   </div>
           		</div> <!-- item end -->
 
-               <div class="columns portfolio-item .projects">
+               <div class="columns portfolio-item projects">
                   <div class="item-wrap">
 
                      <a href="#modal-02" title="">
@@ -175,7 +175,7 @@
                   </div>
           		</div> <!-- item end -->
 
-              <div class="columns portfolio-item .hackathons">
+              <div class="columns portfolio-item hackathons">
                   <div class="item-wrap">
 
                      <a href="#modal-01" title="">
@@ -248,7 +248,7 @@
 
     	<!-- THINGS I DO POPUPS -->
 
-    	<div id="modal-01" class="popup-modal mfp-hide">
+    	<div id="modal-01" class="popup-modal mfp-hide hackathons">
 
 		      <img class="scale-with-grid" src="images/portfolio/hackmining.jpg" alt="" />
 
