--- a/index.html
+++ b/index.html
@@ -141,7 +141,7 @@
                   </div>
           		</div> <!-- item end -->
 
-               <div class="columns portfolio-item .coolevents">
+               <div class="columns portfolio-item coolevents">
                   <div class="item-wrap">
 
                      <a href="#modal-03" title="">
@@ -158,7 +158,7 @@
                   </div>
           		</div> <!-- item end -->
 
-               <div class="columns portfolio-item .otherrandom">
+               <div class="columns portfolio-item otherrandom">
                   <div class="item-wrap">
 
                      <a href="#modal-04" title="">
@@ -192,7 +192,7 @@
                   </div>
               </div> <!-- item end -->
 
-               <div class="columns portfolio-item .hackathons">
+               <div class="columns portfolio-item hackathons">
                   <div class="item-wrap">
 
                      <a href="#modal-02" title="">
@@ -209,7 +209,7 @@
                   </div>
               </div> <!-- item end -->
 
-               <div class="columns portfolio-item .hackathons">
+               <div class="columns portfolio-item hackathons">
                   <div class="item-wrap">
 
                      <a href="#modal-03" title="">
@@ -226,7 +226,7 @@
                   </div>
               </div> <!-- item end -->
 
-               <div class="columns portfolio-item .otherrandom">
+               <div class="columns portfolio-item otherrandom">
                   <div class="item-wrap">
 
                      <a href="#modal-04" title="">
