--- a/index.html
+++ b/index.html
@@ -32,20 +32,21 @@
 
  
 <body data-spy="scroll" data-target="#nav-wrap" id=body>
-
- <div class="row">
-    <div class="col full">
-      <div class="logo"> <a href="#"><img alt="" src="images/logo.png"></a> </div>
-      <nav id="nav-wrap" class="navbar"> <a class="mobile-btn" href="#nav-wrap" title="Show navigation">Show navigation</a> <a class="mobile-btn" href="#" title="Hide navigation">Hide navigation</a>
-        <ul id="nav" class="nav navbar-nav" class="nav">
-          <li><a href="#index">Home</a></li>
-          <li><a href="#intro">Introduction</a></li>
-          <li><a href="#about">About</a></li>
-          <li><a href="#contact">Contact</a></li>
-        </ul>
-      </nav>
+  <header class="mobile">
+   <div class="row">
+      <div class="col full">
+        <div class="logo"> <a href="#"><img alt="" src="images/logo.png"></a> </div>
+        <nav id="nav-wrap" class="navbar"> <a class="mobile-btn" href="#nav-wrap" title="Show navigation">Show navigation</a> <a class="mobile-btn" href="#" title="Hide navigation">Hide navigation</a>
+          <ul id="nav" class="nav navbar-nav" class="nav">
+            <li><a href="#index">Home</a></li>
+            <li><a href="#intro">Introduction</a></li>
+            <li><a href="#about">About</a></li>
+            <li><a href="#contact">Contact</a></li>
+          </ul>
+        </nav>
+      </div>
     </div>
-  </div>
+  </header>
 
 <!---CONTENT REVEAL/HERO-->
 
