things i do edit

--- a/index.html
+++ b/index.html
@@ -72,7 +72,7 @@
 			</div><!--container -->
 		</div><!--main -->
 
-<!---ABOUT-->	
+<!---Intro-->	
 
 
 		<div id="intro" class="row tm-media-row">
@@ -89,21 +89,66 @@
 
 
 <!---THINGS I DO-->
+
+<section id="portfolio">
+  <div class="row section-head">
+    <div class="col one-third">
+      <h3><strong>Things I Do</strong></h3>
+
+      <nav class="project-filter clearfix text-center wow fadeInLeft"  data-wow-delay="0.5s">
+            <ul class="list-inline">
+                <li><a href="javascript:;" class="filter" data-filter="all">All</a></li>
+                <li><a href="javascript:;" class="filter" data-filter=".hackathons">Hackathons</a></li> <!-- was .app -->
+                <li><a href="javascript:;" class="filter" data-filter=".coolevents">Cool Events</a></li> <!-- was .photog -->
+                <li><a href="javascript:;" class="filter" data-filter=".projects">Projects</a></li> <!-- EXTRA -->
+                <li><a href="javascript:;" class="filter" data-filter=".involvement">Involvement</a></li> <!-- was .web -->
+                <li><a href="javascript:;" class="filter" data-filter=".otherrandom">Other Random</a></li> <!-- was .print -->
+            </ul>
+          <br>
+      </nav>
+      
+    </div>
+    <div class="col two-thirds">
+      <div class="intro">
+        <p>At vero eos et accusamus et iusto odio dignissimos ducimus qui blanditiis praesentium voluptatum deleniti atque corrupti quos dolores et quas molestias excepturi sint occaecati cupiditate. At vero eos et accusamus et iusto odio dignissimos ducimus qui blanditiis praesentium. </p>
+      </div>
+    </div>
+  </div>
+  <div class="row">
+    <div class="portfolio-wrapper">
+      <div class="col">
+        <h2><i class="icon-desktop"></i>Webdesign</h2>
+        <p>At vero eos et accusamus et iusto odio dignissimos ducimus qui blanditiis praesentium voluptatum deleniti atque corrupti quos dolores et quas molestias excepturi sint occaecati cupiditate. At vero eos et accusamus et molestias iusto odio dignissimos.</p>
+      </div>
+      <div class="col">
+        <h2><i class="icon-star"></i>Branding</h2>
+        <p>At vero eos et accusamus et iusto odio dignissimos ducimus qui blanditiis praesentium voluptatum deleniti atque corrupti quos dolores et quas molestias excepturi sint occaecati cupiditate. At vero eos et accusamus et iusto odio dignissimos.</p>
+      </div>
+      <div class="col m-first">
+        <h2><i class="icon-camera"></i>Photography</h2>
+        <p>At vero eos et accusamus et iusto odio dignissimos ducimus qui blanditiis praesentium voluptatum deleniti atque corrupti quos dolores et molestias quas molestias excepturi sint occaecati cupiditate. At vero eos et accusamus et iusto odio dignissimos.</p>
+      </div>
+      <div class="col first">
+        <h2><i class="icon-globe"></i>Web Development</h2>
+        <p>At vero eos et accusamus et iusto odio dignissimos ducimus qui blanditiis praesentium voluptatum deleniti atque corrupti quos dolores et quas molestias excepturi sint occaecati cupiditate. At vero eos et accusamus et iusto odio molestias dignissimos.</p>
+      </div>
+      <div class="col m-first">
+        <h2><i class=" icon-list-alt"></i>User Interface</h2>
+        <p>At vero eos et accusamus et iusto odio dignissimos ducimus qui blanditiis praesentium voluptatum deleniti atque corrupti quos dolores et quas molestias excepturi sint occaecati cupiditate. At vero eos et accusamus et iusto odio dignissimos.</p>
+      </div>
+      <div class="col">
+        <h2><i class="icon-print"></i>Printing</h2>
+        <p>At vero eos et accusamus et iusto odio dignissimos ducimus qui blanditiis praesentium voluptatum deleniti atque corrupti molestias quos dolores et quas molestias excepturi sint occaecati cupiditate. At vero eos et accusamus et iusto odio dignissimos.</p>
+      </div>
+    </div>
+  </div>
+</section>
+
 <div id="portfolio">
 
             <h3 class="tm-media-title tm-gray-text"><strong>Things I Do<br></strong></h3>
 
-            <nav class="project-filter clearfix text-center wow fadeInLeft"  data-wow-delay="0.5s">
-		        <ul class="list-inline">
-		            <li><a href="javascript:;" class="filter" data-filter="all">All</a></li>
-		            <li><a href="javascript:;" class="filter" data-filter=".hackathons">Hackathons</a></li> <!-- was .app -->
-		            <li><a href="javascript:;" class="filter" data-filter=".coolevents">Cool Events</a></li> <!-- was .photog -->
-		            <li><a href="javascript:;" class="filter" data-filter=".projects">Projects</a></li> <!-- EXTRA -->
-		            <li><a href="javascript:;" class="filter" data-filter=".involvement">Involvement</a></li> <!-- was .web -->
-		            <li><a href="javascript:;" class="filter" data-filter=".otherrandom">Other Random</a></li> <!-- was .print -->
-		        </ul>
-		        <br>
-     		</nav>
+            
 
 
 
