--- a/index.html
+++ b/index.html
@@ -91,18 +91,8 @@
 <!---THINGS I DO-->
 
 
-<section id="portfolio">
-  <div class="row section-head">
-    <div class="col one-third">
-      <h3><strong>Things I Do</strong></h3>   
-    </div>
-    <div class="col two-thirds">
-      <div class="intro">
-        <p>At vero eos et accusamus et iusto odio dignissimos ducimus qui blanditiis praesentium voluptatum deleniti atque corrupti quos dolores et quas molestias excepturi sint occaecati cupiditate. At vero eos et accusamus et iusto odio dignissimos ducimus qui blanditiis praesentium. </p>
-      </div>
-    </div>
-  </div>
-</section>
+<div id="portfolio"><h3><strong>Things I Do</strong></h3> </div> 
+
 
 <nav class="project-filter clearfix text-center wow fadeInLeft"  data-wow-delay="0.5s">
       <ul class="list-inline">
