--- a/index.html
+++ b/index.html
@@ -82,7 +82,7 @@
                 <div class="col-xs-12 col-sm-8 col-md-8 col-lg-8">
                     <div class="tm-media-text-container">
                         <h3 class="tm-media-title tm-gray-text"><strong>A bit about me</strong></h3>
-                        <h4 class="tm-media-description tm-gray-text-2">Hey, it's Jane! I am a Computer Engineering student at the University of Toronto, specializing in Software and Machine Intelligence. I love building things that solve problems, improving those solutions, and finding better ways of going about all of it -- especially through software.</h4>    
+                        <h4 class="tm-media-description tm-gray-text-2">Hey, it's Jane! I am a Computer Engineering student at the University of Toronto, specializing in Software and Machine Intelligence. I am passionate about building things that solve problems, improving those solutions, and finding better ways of going about all of it -- especially through software. I love software, data, and vegetables.</h4>    
                     </div>                    
                 </div>
             </div> <!-- About Section End-->
@@ -110,23 +110,23 @@
   <div class="row">
     <div class="portfolio-wrapper">
       <div class="col">
-        <h2><i class="icon-desktop"></i>Webdesign</h2>
-        <p>At vero eos et accusamus et iusto odio dignissimos ducimus qui blanditiis praesentium voluptatum deleniti atque corrupti quos dolores et quas molestias excepturi sint occaecati cupiditate. At vero eos et accusamus et molestias iusto odio dignissimos.</p>
+        <h2><i class="icon-desktop"></i>Autonomous Driving</h2>
+        <p>For the last two years, I've been a Software and Autonomy developer for the UofT self driving car team -- AuToronto. I was the lead in developing the car's WatchDog system, used for interfacing with hardware and monitoring system health. At present, I am working on the autonmy team, developing the object tracking algorithm. I am passionate about the impliations that self-driving technologies can have on our society.</p>
       </div>
       <div class="col">
-        <h2><i class="icon-star"></i>Branding</h2>
-        <p>At vero eos et accusamus et iusto odio dignissimos ducimus qui blanditiis praesentium voluptatum deleniti atque corrupti quos dolores et quas molestias excepturi sint occaecati cupiditate. At vero eos et accusamus et iusto odio dignissimos.</p>
+        <h2><i class="icon-star"></i>Natural Language Processing</h2>
+        <p>Over the Summer, I worked as a Data Engineering intern on the Robotic Process Automation team at the Royal Bank of Canada (RBC) doing research and implementation of tools using Natural Lanugage Processing. I built a semantic search engine that performed document clustering, input tokenization, skip-grams and n-grams, and relevant document extraction. This project went end-to-end through the development pipeline, from research to production.</p>
       </div>
       <div class="col m-first">
-        <h2><i class="icon-camera"></i>Photography</h2>
-        <p>At vero eos et accusamus et iusto odio dignissimos ducimus qui blanditiis praesentium voluptatum deleniti atque corrupti quos dolores et molestias quas molestias excepturi sint occaecati cupiditate. At vero eos et accusamus et iusto odio dignissimos.</p>
+        <h2><i class="icon-camera"></i>Civitas Tech</h2>
+        <p>I am a Co-Founder of Civitas Tech, a start-up building technology for the community. Our platform provides and incentivized, gameified, means of connecting people within their neighbourhood for assisting one another with non-emergency matters, participating in volunteer work, and being engaged in their local events. The goal of this project is to engage people in civic duties, alieviating police involvement in mom-policing matters, reducing 911 call wait times, and bettering the safety and wellbeing of our city. I am passsionate about both the technology behind the platform, and the mission we are devout to accomplish.</p>
       </div>
       <div class="col first">
-        <h2><i class="icon-globe"></i>Web Development</h2>
+        <h2><i class="icon-globe"></i>brAIn team</h2>
         <p>At vero eos et accusamus et iusto odio dignissimos ducimus qui blanditiis praesentium voluptatum deleniti atque corrupti quos dolores et quas molestias excepturi sint occaecati cupiditate. At vero eos et accusamus et iusto odio molestias dignissimos.</p>
       </div>
       <div class="col m-first">
-        <h2><i class=" icon-list-alt"></i>User Interface</h2>
+        <h2><i class=" icon-list-alt"></i>Hackathons</h2>
         <p>At vero eos et accusamus et iusto odio dignissimos ducimus qui blanditiis praesentium voluptatum deleniti atque corrupti quos dolores et quas molestias excepturi sint occaecati cupiditate. At vero eos et accusamus et iusto odio dignissimos.</p>
       </div>
       <div class="col">
