more things i do

--- a/index.html
+++ b/index.html
@@ -119,19 +119,19 @@
       </div>
       <div class="col m-first">
         <h2><i class="icon-camera"></i>Civitas Tech</h2>
-        <p>I am a Co-Founder of Civitas Tech, a start-up building technology for the community. Our platform provides and incentivized, gameified, means of connecting people within their neighbourhood for assisting one another with non-emergency matters, participating in volunteer work, and being engaged in their local events. The goal of this project is to engage people in civic duties, alieviating police involvement in mom-policing matters, reducing 911 call wait times, and bettering the safety and wellbeing of our city. I am passsionate about both the technology behind the platform, and the mission we are devout to accomplish.</p>
+        <p>I am a Co-Founder of Civitas Tech, a start-up building technology for the community. Our platform provides and incentivized, gameified, means of connecting people within their neighbourhood for assisting one another with non-emergency matters, participating in volunteer work, and being engaged in their local events. The goal of this project is to engage people in civic duties, alieviating police involvement in non-policing matters, reducing 911 call wait times, and bettering the safety and wellbeing of our city. I am passsionate about both the technology behind the platform, and the mission we are devout to accomplish.</p>
       </div>
       <div class="col first">
         <h2><i class="icon-globe"></i>brAIn team</h2>
-        <p>At vero eos et accusamus et iusto odio dignissimos ducimus qui blanditiis praesentium voluptatum deleniti atque corrupti quos dolores et quas molestias excepturi sint occaecati cupiditate. At vero eos et accusamus et iusto odio molestias dignissimos.</p>
+        <p>I am a Neural Network developer for the brAIn team; we are using computer vision, and deep learning for reading images of brain tissue slides for the purpose of brain cancer diagnosis. We have built a CNN that generates a colour map for the slide contents (white matter, grey mateer, tumor) in a fraction of the time that a pathologist can do so with a hystological stain, and performs diagnosis with an accuracy rate of over 96%.</p>
       </div>
       <div class="col m-first">
         <h2><i class=" icon-list-alt"></i>Hackathons</h2>
-        <p>At vero eos et accusamus et iusto odio dignissimos ducimus qui blanditiis praesentium voluptatum deleniti atque corrupti quos dolores et quas molestias excepturi sint occaecati cupiditate. At vero eos et accusamus et iusto odio dignissimos.</p>
+        <p>I am a hackathon junky and avid problem-solver. I love to go to hackathons to meet and work with new people, get exposed to industry knowledge and technologies I haven't seen before, and ideate and code on how to tackle real world challenges. Some of the hackathons I've gone to are: HackTPS, Hack the North, ElleHacks, Citadel Datahon, Telus IoT Challenge, Hack Mining, EngHacks, Hack the Six, and MIT Energy Hacks, to name a few.</p>
       </div>
       <div class="col">
-        <h2><i class="icon-print"></i>Printing</h2>
-        <p>At vero eos et accusamus et iusto odio dignissimos ducimus qui blanditiis praesentium voluptatum deleniti atque corrupti molestias quos dolores et quas molestias excepturi sint occaecati cupiditate. At vero eos et accusamus et iusto odio dignissimos.</p>
+        <h2><i class="icon-print"></i>Podcasts</h2>
+        <p>I love to walk, and love to listen to podcasts while doing so. My favorite podcasts are ones like 99 Percent Invisible, where they discuss< an incredibly diverse range of topics, in a way that makes you look at or think about even the most every-day-things in different ways.</p>
       </div>
     </div>
   </div>
