--- a/index.html
+++ b/index.html
@@ -82,7 +82,7 @@
                 <div class="col-xs-12 col-sm-8 col-md-8 col-lg-8">
                     <div class="tm-media-text-container">
                         <h3 class="tm-media-title tm-gray-text"><strong>A bit about me</strong></h3>
-                        <h4 class="tm-media-description tm-gray-text-2">Hey, it's Jane! I am a Computer Engineering student at the University of Toronto, specializing in Software and Machine Intelligence. I am passionate about building things that solve problems, improving those solutions, and finding better ways of going about all of it -- especially through software. I love software, data, and vegetables.</h4>    
+                        <h4 class="tm-media-description tm-gray-text-2">Hey, it's Jane! I am a Computer Engineering student at the University of Toronto, specializing in Software and Machine Intelligence. I am passionate about building things that solve problems, improving those solutions, and finding better ways of going about all of it -- especially through software. I love coding, data, and vegetables.</h4>    
                     </div>                    
                 </div>
             </div> <!-- About Section End-->
