--- a/index.html
+++ b/index.html
@@ -40,7 +40,7 @@
           <ul id="nav" class="nav navbar-nav" class="nav">
             <li><a href="#index">Home</a></li>
             <li><a href="#intro">Introduction</a></li>
-            <li><a href="#about">About</a></li>
+            <li><a href="#portfolio">Things I Do</a></li>
             <li><a href="#contact">Contact</a></li>
           </ul>
         </nav>
