--- a/index.html
+++ b/index.html
@@ -6,6 +6,9 @@
 	<link rel="stylesheet" href="css/bootstrap.min.css">
 	<link rel="stylesheet" href="css/magnific-popup.css">
 	<link rel="stylesheet" href="css/animate.css">
+	<link rel="stylesheet" type="text/css" href="css/modern-blog.css" />
+	<link rel="stylesheet" type="text/css" href="css/normalize.css" />
+	<link rel="stylesheet" type="text/css" href="fonts/font-awesome/css/font-awesome.css" />
 	<!-- Global site tag (gtag.js) - Google Analytics -->
 	<script async src="https://www.googletagmanager.com/gtag/js?id=UA-122139139-1"></script>
 	<script>
@@ -63,7 +66,15 @@
 				<br><br>
 				<hr class="thicker">
 
-				<br><br><br><br><br><br><br><br>
+				<br><br>
+				<div class="social-icons">
+	                <a href="https://twitter.com/IllarionovaJane"><i class="fa fa-twitter-square fa-3x"></i></a>
+            		<a href="https://www.instagram.com/janeillario/?hl=en"><i class="fa fa-instagram fa-3x"></i></a>
+            		<a href="https://github.com/chrisdryden"><i class="fa fa-github-square fa-3x"></i></a>
+            		<a href="https://www.linkedin.com/in/janeillarionova/"><i class="fa fa-linkedin-square fa-3x"></i></a>
+            		<a href="assets/Illarionova_Jane.pdf"><i class="fa fa-file-text fa-3x"></i></a>
+            	</div>
+				<br><br><br><br><br><br>
 	 
 				<a href="index.html#intro" class="scrollto">
 				<p class="scrollto--arrow"><img src="images/scroll_down.png" alt="scroll down arrow"></p>
