fix github link

--- a/index.html
+++ b/index.html
@@ -70,7 +70,7 @@
 				<div class="social-icons">
 	                <a href="https://twitter.com/IllarionovaJane"><i class="fa fa-twitter-square fa-3x"></i></a>
             		<a href="https://www.instagram.com/janeillario/?hl=en"><i class="fa fa-instagram fa-3x"></i></a>
-            		<a href="https://github.com/chrisdryden"><i class="fa fa-github-square fa-3x"></i></a>
+            		<a href="https://github.com/janeillario"><i class="fa fa-github-square fa-3x"></i></a>
             		<a href="https://www.linkedin.com/in/janeillarionova/"><i class="fa fa-linkedin-square fa-3x"></i></a>
             		<a href="assets/Illarionova_Jane.pdf"><i class="fa fa-file-text fa-3x"></i></a>
             	</div>
